<resources>
    <string name="language_en">English</string>
    <string name="language_fr">Français</string>

    <string name="language_array_title">Language</string>

    <string-array name="language_array">
        <item>@string/language_en</item>
        <item>@string/language_fr</item>
    </string-array>

    <string name="app_name">Ace Track</string>
    <string name="new_result">Add Result</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_results">Results</string>
    <string name="menu_players">Players</string>
    <string name="menu_contact">Contact</string>
    <string name="fill_in_all_fields">Please fill in all fields</string>
    <string name="select_another_player">Players cannot play against themselves</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_date_of_birth">D.O.B.</string>
    <string name="select_player_image">Select player image</string>
    <string name="button_add_image">Add profile picture</string>
    <string name="change_player_image">Change player image</string>
    <string name="contact_email">acetrackapp@gmail.com</string>
    <string name="contact_phone">+33 188 289 000</string>
    <string name="contact_location_title">EFREI Tennis Club</string>
    <string name="contact_location">EFREI Tennis Club, Villejuif, France</string>
    <string name="contact_title">Get in touch!</string>
    <string name="update_result">Update result</string>
    <string name="update_player">Update player</string>
    <string name="select_a_player">Select player:</string>
    <string name="new_result_players_label">Players:</string>
    <string name="new_result_score_label">Score:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hint_email_address">Email</string>
    <string name="nav_header_title">EFREI Tennis Club</string>
    <string name="nav_header_subtitle">Your home of tennis</string>
    <string name="nav_header_desc">Menu</string>
    <string name="select_experience">Select experience:</string>
    <string name="results_not_found">No results yet...</string>
    <string name="player_edit_denied">You cannot edit another players details!</string>
    <string name="player_delete_denied">You cannot delete another player!</string>
    <string name="confirm_player_delete">Are you sure you want to delete this player?</string>
    <string name="new_result_date_label">Date:</string>
    <string name="select_date">Select date</string>
    <string name="change_date">Change date</string>
    <string name="date_placeholder">DD/MM/YYYY</string>
    <string name="swipe_delete_prompt">Are you sure you want to delete this result?</string>
    <string name="ok_btn">Yes</string>
    <string name="cancel_btn">No</string>
    <string name="take_photo">Take Photo</string>
    <string name="google_maps_search_location">Search Location</string>
    <string name="google_maps_search">Search</string>

    <!-- START Tennis Rules resources -->
    <string name="more">Rules and regulations</string>
    <string name="content_description_more">View rules and instructions</string>
    <string name="settings">Settings</string>
    <string name="content_description_settings">Change application language and more</string>
    <string name="tennis_rules_header">Tennis rules</string>
    <string name="tennis_rules_general"><b>General rules of tennis</b>\n\n
        <li>A ball must land within bounds for play to continue; if a player hits the ball outside of bounds, this results in the loss of the point for them.</li>\n
        <li>Players/teams cannot touch the net or posts or cross onto the opponent’s side.</li>\n
        <li>Players/teams cannot carry the ball or catch it with the racquet.</li>\n
        <li>Players cannot hit the ball twice.</li>\n
        <li>Players must wait until the ball passes the net before they can return it.</li>\n
        <li>A player that does not return a live ball before it bounces twice loses the point.</li>\n
        <li>If the ball hits or touches the players, that counts as a penalty.</li>\n
        <li>If the racquet leaves the hand or verbal abuse occurs, a penalty is given.</li>\n
        <li>Any ball that bounces on the lines of boundary are considered good.</li>\n
        <li>A serve must bounce first before the receiving player can return it.</li>
    </string>
    <string name="tennis_rules_equipment"><b>Equipment</b>\n\n
        <li><b>Racquet</b> – A racquet is comprised of a handle, a frame, and strings that are bound in a crisscross weaving pattern. A racquet’s frame should not exceed 32 inches in length, with a handle no longer than 12.5 inches in width, and a surface no more than 15.5 inches in overall length or 11.5 inches in width. There can also be no objects or devices on the racquet except for ones that prevent vibration and wear and tear.</li>\n
        <li><b>Ball</b> – A tennis ball is white or yellow in color for tournaments, with measurements of 2-1/2 to 2-5/8 inches in diameter and weighing anywhere from 2 to 2-1/16 ounces. The elasticity of the ball and the uniform outer surface are also determined by approved specifications.</li>
    </string>
    <string name="tennis_rules_scoring"><b>Scoring</b>\n\n
        <li><b>Points</b> – Smallest unit of measurement. Points increment from Love(0)-15-30-40-game.</li>\n
        <li><b>Games</b> – Games consist of 4 points each, and is won when a player reaches 4 points with at least a 2 point advantage.</li>\n
        <li><b>Sets</b> – A set consists of 6 games and is won by the player/team who reaches 6 games first with least a 2 point lead.</li>\n
        <li><b>Advantage Set</b> – If a game score of 6-6 is reached and advantage set rules are used, a player/team can only win a set with a 2 game lead.</li>\n
        <li><b>Matches</b> – A match is usually played as best of 3 or best of 5 sets.</li>\n
        <li><b>Deuce</b> – Occurs if a score of 40-40 is reached. In order to win the game, a player/team must win 2 consecutive points in order to take the game. If a player wins one point, they have advantage, but if they lose the next point, the score returns to deuce.</li>\n
        <li><b>Tie-break game</b> – If a game score of 6-6 is reached and tie-break set rules are used, players must play a tie-break game in order to decide who wins the set. In a tie-break game, a player/team must reach 7 points with a two point advantage to win. For the serving format of a tie-break game, player 1 serves for the first point, player 2 serves for the next two points, player 1 serves for the next two points after that, etc.</li>
    </string>
    <string name="tennis_rules_source">
        <b>Source:</b> <a href="http://protennistips.net/tennis-rules">http://protennistips.net/tennis-rules</a>
    </string>
    <string name="tennis_rules_game">Game</string>
    <string name="tennis_rules_match">Match</string>
    <string name="tennis_rules_set">Set</string>
    <string name="tennis_rules_point">Point</string>

    <!-- START Firebase Resources -->
    <string name="log_out">Log Out</string>
    <string name="hint_password">Password</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="menu_editResult">Edit result</string>
    <string name="firebase_database">https://acetrack-kh-default-rtdb.europe-west1.firebasedatabase.app</string>
    <string name="firebase_database_results_reference">results</string>
    <string name="firebase_database_players_reference">players</string>
</resources>
