<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authentication.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorSecondary="@color/colorPrimary"
            app:titleTextColor="@color/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/waveImage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollableContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxBackgroundColor="@android:color/transparent"
                    android:background="@android:color/transparent" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_first_name"
                        android:inputType="text"
                        android:textColorHint="@android:color/transparent"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxBackgroundColor="@android:color/transparent"
                    android:background="@android:color/transparent" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_last_name"
                        android:inputType="text"
                        android:textColorHint="@android:color/transparent"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_email_address"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@android:color/transparent"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                app:passwordToggleEnabled="true" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_password"
                    android:textColorHint="@android:color/transparent"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_date_of_birth"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:layout_marginVertical="8dp"
                    android:layout_marginLeft="8dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/resultDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:textSize="18sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/selectDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/select_date" />

            </LinearLayout>

            <Spinner
                android:id="@+id/experienceSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:lineSpacingExtra="15sp"
                android:padding="8dp"
                android:textSize="18dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/chooseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:padding="8dp"
                android:text="@string/button_add_image"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/memberImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:padding="8dp"
                android:stateListAnimator="@null"
                android:text="@string/register"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
