<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authentication.WelcomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/flatGreen"
        android:fitsSystemWindows="true"
        app:elevation="0dip">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:menu="@menu/app_bar_top"
            app:navigationIcon="@drawable/ic_login_24dp"
            app:titleCentered="true"
            app:subtitleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/tennis_player"
            android:alpha="0.75"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp">

            <ImageView
                android:id="@+id/welcomeImage"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ace_track_logo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/login"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/flatGreen"/>

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/register"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/flatGreen"/>

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</LinearLayout>
