<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authentication.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorSecondary="@color/colorPrimary"
            app:titleTextColor="@color/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/waveImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_wave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/hint_email_address"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginLeft="8dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/togglePasswordVisibilityButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:padding="10dp"
                android:layout_weight="4"
                android:scaleType="centerInside"
                app:tint="@color/colorPrimary"
                android:backgroundTint="@color/colorAccent" />

        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
